nunjucks template 분할 완료

--- a/src/include/memo_contents.html
+++ b/src/include/memo_contents.html
@@ -1,8 +1,8 @@
 <div class="book-container">
-    <form action="" class="book-container__form">
+    <form class="book-container__form">
       <fieldset class="book-container__fieldset">
-        <legend>메모 입력 폼</legend>
-        <label for="areaField">메모 입력</label>
+        <legend class="blind">메모 입력 폼</legend>
+        <label for="areaField" class="blind">메모 입력</label>
         <textarea name="areaField" id="areaField" class="book-container__fieldset-textarea" cols="30" rows="10"></textarea>
         <div class="book-container__fieldset-btns">
           <button type="button" class="book-container__cancel-button">Cancel</button>
