--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,4 +5,4 @@
 @import "common/variable";
 @import "common/mixins";
 @import "common/placeholders";
-// @import "import/main";
+@import "import/style";
