--- a/src/template/template.html
+++ b/src/template/template.html
@@ -10,7 +10,7 @@
 {% endblock %}
 </head>
 <body class="{{bodyClass}}">
-<section id="wrap">
+<section id="wrap" class="{{wrapClass}}">
     {% block header %}
     {% endblock %}
     
