--- a/src/include/header.html
+++ b/src/include/header.html
@@ -1,29 +1,39 @@
-<div class="header">
-	<h1>
+<header class="header">
+	<h1 class="title">
 		<a href="./">FastBook</a>
 	</h1>
 	{% if headerItem == 'menu' %}
 	<div class="header-menu">
-		<h2>사용자 메뉴</h2>
+		<h2 class="blind">사용자 메뉴</h2>
 		<ul class="header-mnue__btns">
 			<li>
-				<a href="#none">메모 추가</a>
+				<a href="#none">
+					<span class="ico-memo ico-memo__add">메모 추가</span>
+				</a>
 			</li>
 			<li>
-				<a href="#none">메모 삭제</a>
+				<a href="#none">
+					<span class="ico-memo ico-memo__clear">메모 삭제</span>
+				</a>
 			</li>
 			<li>
-				<a href="#none">정보 변경</a>
+				<a href="#none">
+					<span class="ico-memo ico-memo__modify">정보 변경</span>
+				</a>
 			</li>
 			<li>
-				<a href="#none">로그아웃</a>
+				<a href="#none">
+					<span class="ico-memo ico-memo__logout">로그아웃</span>
+				</a>
 			</li>
 		</ul>
 		<div class="header-menu__controls">
-			<label for="inpSearch">메모 검색</label>
+			<label for="inpSearch" class="blind">메모 검색</label>
 			<input type="text" id="inpSearch" name="inpSearch" class="header-menu__controls-input" value="">
-			<button type="button" class="header-menu__controls-button">검색어 삭제</button>
+			<button type="button" class="header-menu__controls-button">
+				<span class="ico-memo ico-memo__del">검색어 삭제</span>
+			</button>
 		</div>
 	</div>
 	{% endif %}
-</div>
+</header>
