--- a/src/include/memo_side.html
+++ b/src/include/memo_side.html
@@ -1,5 +1,5 @@
 <div class="memo-side">
-	<h2>메모 리스트</h2>
+	<h2 class="blind">메모 리스트</h2>
 	<ul class="memo-side__list">
 		<li>
 			<a href="#none" class="memo-side__link">
