main.html, style.css - 메인 페이지 레이아웃 스타일링

--- a/src/include/header.html
+++ b/src/include/header.html
@@ -27,10 +27,10 @@
 				</a>
 			</li>
 		</ul>
-		<div class="header-menu__controls">
+		<div class="header-menu__search">
 			<label for="inpSearch" class="blind">메모 검색</label>
-			<input type="text" id="inpSearch" name="inpSearch" class="header-menu__controls-input" value="">
-			<button type="button" class="header-menu__controls-button">
+			<input type="text" id="inpSearch" name="inpSearch" class="header-menu__search-input" value="">
+			<button type="button" class="header-menu__search-button">
 				<span class="ico-memo ico-memo__del">검색어 삭제</span>
 			</button>
 		</div>
