--- a/src/template/template.html
+++ b/src/template/template.html
@@ -14,7 +14,7 @@
     {% block header %}
     {% endblock %}
     
-    <section id="container" role="main">
+    <section id="container" class="container" role="main">
         {% block form_contents %}
         {% endblock %}
         
