--- a/src/include/memo_side.html
+++ b/src/include/memo_side.html
@@ -29,5 +29,138 @@
 				<span class="memo-side__date">2018-06-12</span>
 			</a>
 		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
+		<li>
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
 	</ul>
 </div>
