--- a/src/scss/import/_style.scss
+++ b/src/scss/import/_style.scss
@@ -50,20 +50,22 @@
   top:0;
   right:0;
   bottom:0;
-  
+  height: 100%;
   &__fieldset-textarea{
     position: absolute;
-    top:0;
+    top:70px;
     left:0;
     right: 0;
     bottom:0;
     width:100%;
-    padding:70px 30px;
+    height: auto;
+    padding:0 30px;
     margin-right:-30px;
     box-sizing: border-box;
     border:none;
     resize: none;
     background: none;
+    // background: red;
     &:focus{
       outline: none;
     }
@@ -76,13 +78,13 @@
     left:0px;
     right:30px;
     width:100%;
-    padding:30px 30px 10px;
+    padding:30px 30px 20px;
     border:none;
     font-size:18px;
     font-weight: bold;
     &:focus{
       outline: none;
-      border-bottom:2px dashed greenyellow;
+      // border-bottom:2px dashed greenyellow;
     }
   }
 }
