--- a/src/include/memo_contents.html
+++ b/src/include/memo_contents.html
@@ -2,10 +2,10 @@
     <form class="memo-contents__form">
       <fieldset class="memo-contents__fieldset">
         <legend class="blind">메모 입력 폼</legend>
-        <label for="formTitleInput" class="blind">제목</label>
-        <input type="text" name="formTitleInput" id="formTitleInput" class="memo-contents__fieldset-input" value="" placeholder="Title">
-        <label for="formTextarea" class="blind">내용</label>
-        <textarea name="formTextarea" id="formTextarea" class="memo-contents__fieldset-textarea" cols="30" rows="10" placeholder="Write Here"></textarea>
+        <label for="titleInput" class="blind">제목</label>
+        <input type="text" name="titleInput" id="titleInput" class="memo-contents__fieldset-input" value="" placeholder="Title">
+        <label for="contentTextarea" class="blind">내용</label>
+        <textarea name="contentTextarea" id="contentTextarea" class="memo-contents__fieldset-textarea" cols="30" rows="10" placeholder="Write Here"></textarea>
         <div class="memo-contents__fieldset-btns">
           <button type="button" class="memo-contents__cancel-button">Cancel</button>
           <button type="button" class="memo-contents__save-button">Save</button>
