--- a/src/include/header.html
+++ b/src/include/header.html
@@ -3,7 +3,7 @@
 	<h1 class="title">
 		<a href="./">FastBook</a>
 	</h1>
-	
+
 	<div class="header-menu">
 		<h2 class="blind">사용자 메뉴</h2>
 		<ul class="header-mnue__btns">
@@ -38,5 +38,12 @@
 	</div>
 </header>
 {% elif headerItem == 'login' %}
-ddd
+<header class="header">
+	<h1 class="title">
+		<span>FASTBOOK</span>
+	</h1>
+	<strong class="slogun">
+		SAVE YOUR NOTES QUICKLY
+	</strong>
+</header>
 {% endif %}
