--- a/src/scss/import/_style.scss
+++ b/src/scss/import/_style.scss
@@ -62,8 +62,9 @@ input:-webkit-autofill {
   left:0;
   right:0;
   overflow: hidden;
-  background:grey;
+  background:#465298;
   padding:15px;
+  // border-bottom:1px solid #aaa;
   .title{
     float: left;
   }
@@ -123,7 +124,7 @@ input:-webkit-autofill {
   height: 100%;
   &__fieldset-textarea{
     position: absolute;
-    top:70px;
+    top:30px;
     left:0;
     right: 0;
     bottom:0;
@@ -155,6 +156,14 @@ input:-webkit-autofill {
     &:focus{
       outline: none;
       // border-bottom:2px dashed greenyellow;
+    }
+  }
+  &__fieldset-btns{
+    position: absolute;
+    bottom:10px;
+    right:30px;
+    .button-g{
+      width:80px;
     }
   }
 }
