글작성페이지 스타일 완성

--- a/src/include/header.html
+++ b/src/include/header.html
@@ -43,7 +43,7 @@
 	<div class="header-menu">
 		<h2 class="blind">사용자 메뉴</h2>
 		
-		<ul class="header-mnue__btns">
+		<ul class="header-menu__btns">
 			<li>
 				<button type="button">
 					<i class="fas fa-edit" title="메모 추가">
