--- a/src/include/memo_side.html
+++ b/src/include/memo_side.html
@@ -1,9 +1,16 @@
 <div class="memo-side">
 	<h2 class="blind">메모 리스트</h2>
 	<ul class="memo-side__list">
+		<li class="on"><!-- 선택된 메모 클래스 'on' 추가 -->
+			<a href="#none" class="memo-side__link">
+				<strong class="memo-side__title">메모 제목입니다.메모 제목입니다.메모 제목입니다.메모 제목입니다.메모 제목입니다.</strong>
+				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
+				<span class="memo-side__date">2018-06-12</span>
+			</a>
+		</li>
 		<li>
 			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
+				<strong class="memo-side__title">메모 제목입니다.메모 제목입니다.메모 제목입니다.메모 제목입니다.메모 제목입니다.메모 제목입니다.</strong>
 				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
 				<span class="memo-side__date">2018-06-12</span>
 			</a>
@@ -22,6 +29,7 @@
 				<span class="memo-side__date">2018-06-12</span>
 			</a>
 		</li>
+		
 		<li>
 			<a href="#none" class="memo-side__link">
 				<strong class="memo-side__title">메모 제목입니다.</strong>
@@ -29,132 +37,7 @@
 				<span class="memo-side__date">2018-06-12</span>
 			</a>
 		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
-		<li>
-			<a href="#none" class="memo-side__link">
-				<strong class="memo-side__title">메모 제목입니다.</strong>
-				<span class="memo-side__content">가나다라마바사아자차카타파하가나다라마바사아자차카타파하</span>
-				<span class="memo-side__date">2018-06-12</span>
-			</a>
-		</li>
+		
 		<li>
 			<a href="#none" class="memo-side__link">
 				<strong class="memo-side__title">메모 제목입니다.</strong>
