--- a/src/scss/import/_style.scss
+++ b/src/scss/import/_style.scss
@@ -109,7 +109,7 @@ input:-webkit-autofill {
   bottom:0px;
   -webkit-transition: all .07s;
   &__list{
-    min-width: 220px;
+    min-width: 200px;
   }
 }
 .memo-contents{
@@ -174,18 +174,10 @@ footer{
 
 .login{
   background:#465298; 
-}
-.login-section{
-  position: absolute;
-  top:50%;
-  left:50%;
-  width:100%;
-  max-width:320px;
-  min-width:320px;
-  margin-top:-330px;
-  margin-left:-160px;
   color:#fff;
-  
+}
+.login-section,
+.signup-section{
   .header{
     position: static;
     padding:0;
@@ -200,6 +192,45 @@ footer{
     top:0;
     bottom:0;
   }
+}
+.login-section{
+  position: absolute;
+  top:50%;
+  left:50%;
+  width:100%;
+  max-width:320px;
+  min-width:320px;
+  margin-top:-330px;
+  margin-left:-160px;
+}
+.signup-section{
+  position: absolute;
+  top:50%;
+  left:50%;
+  width:100%;
+  max-width:320px;
+  min-width:320px;
+  margin-top:-290px;
+  margin-left:-160px;
+  .header{
+    overflow: inherit;
+  }
+  .title-header{
+    display: block;
+    padding-bottom:20px;
+    font-weight: normal;
+    font-size:34px;
+  }
+  .fa-id-card-alt{
+    display:block;
+    font-size:150px;
+    margin-bottom:20px;
+  }
+}
+.fa-cog{
+  display:block;
+    font-size:150px;
+    margin-bottom:20px;
 }
 .form-contents{
   width:320px;
@@ -223,7 +254,6 @@ footer{
     }
   }
   .button-g{
-    transition: .1s all ease;
     display: block;
     width:100%;
     margin-top:15px;
@@ -232,17 +262,18 @@ footer{
     color:#fff;
     &:hover,
     &:focus{
+      transition: .2s all ease;
       background:#2d387c;
     }
   }
-  .from-contents__login-button{
-    
+  .from-contents__cancel-button{
+    // background:#464646;
   }
 }
 
 @media screen and (max-width:375px){
   .login-section{
-    .header{
+    .item-svg{
       transform: scale(.7);
       margin-bottom:-50px;
     }
@@ -250,7 +281,8 @@ footer{
 }
 
 @media screen and (max-width:320px){
-  .login-section{
+  .login-section,
+  .signup-section{
     .container{
       padding:0 20px;
     }
@@ -258,4 +290,5 @@ footer{
       width:100%;
     }
   }
+  
 }
