버튼 기능 postList 컴포넌트로 이동

--- a/src/scss/import/_style.scss
+++ b/src/scss/import/_style.scss
@@ -4,6 +4,9 @@ html,body{
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 1000px white inset;
 }
+.disabled{
+  background:#eee;
+}
 .button-g{
   display: inline-block;
   vertical-align: top;
